--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px 10px;
+  background: grey;
+}
+
+#featured-property p {
+  width: 800px;
+  height: 100px;
+  text-align: center;
+}
+
+#details div {
+  float: left;
+  background: grey;
+  text-align: center;
+  width: 25%;
+}
